lab6/k8s/kustomization/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sport-platform-prod
  labels:
    app.kubernetes.io/name: sport-platform
    environment: prod
